
PIG-4570: Allow AvroStorage to use a class for the schema (pmazak via daijy)

PIG-4405: Adding 'map[]' support to mock/Storage (nielsbasjes via daijy)

PIG-4638: Allow TOMAP to accept dynamically sized input (nielsbasjes via daijy)

PIG-4639: Add better parser for Apache HTTPD access log (nielsbasjes via daijy)

BUG FIXES

PIG-4888: Line number off when reporting syntax error inside a macro (knoguchi)

PIG-3772: Syntax error when casting an inner schema of a bag and line break involved (ssvinarchukhorton via knoguchi)

PIG-4892: removing /tmp/output before UT (daijy)

PIG-4882: Remove hardcoded groovy.grape.report.downloads=true from DownloadResolver (erwaman via daijy)

PIG-4581: thread safe issue in NodeIdGenerator (rcatherinot via rohini)

PIG-4878: Fix issues from PIG-4847 (rohini)

PIG-4877: LogFormat parser fails test (nielsbasjes via daijy)

PIG-4860: Loading data using OrcStorage() accepts only default FileSystem path (beriaanirudh via rohini)

PIG-4868: Low values for bytes.per.reducer configured by user not honored in Tez for inputs (rohini)

PIG-4869: Removing unwanted configuration in Tez broke ConfiguredFailoverProxyProvider (rohini)

PIG-4867: -stop_on_failure does not work with Tez (rohini)

PIG-4844: Tez AM runs out of memory when vertex has high number of outputs (rohini)

PIG-3906: ant site errors out (nielsbasjes via daijy)

PIG-4851: Null not padded when input has less fields than declared schema for some loader (rohini)

PIG-4850: Registered jars do not use submit replication (rdblue via cheolsoo)

PIG-4845: Parallel instantiation of classes in Tez cause tasks to fail (rohini)

PIG-4841: Inline-op with schema declaration fails with syntax error (knoguchi)

PIG-4832: Fix TestPrumeColumn NPE failure (kellyzly via daijy)

PIG-4833 TestBuiltin.testURIWithCurlyBrace in TEZ failing after PIG-4819 (knoguchi)

PIG-4819: RANDOM() udf can lead to missing or redundant records (knoguchi)

PIG-4816: Read a null scalar causing a Tez failure (daijy)
