@@ -119,6 +119,8 @@ PIG-4639: Add better parser for Apache HTTPD access log (nielsbasjes via daijy)
 
 BUG FIXES
 
+PIG-4881: TestBuiltin.testUniqueID failing on hadoop-1.x (knoguchi)
+
 PIG-4888: Line number off when reporting syntax error inside a macro (knoguchi)
 
 PIG-3772: Syntax error when casting an inner schema of a bag and line break involved (ssvinarchukhorton via knoguchi)
